<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recipeItemCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="7dp"
    app:cardElevation="7dp"
    android:backgroundTint="@color/redColour2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/recipeViewCollapsed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">

            <TextView
                android:id="@+id/txtRecipeName"
                android:transitionName="recipeName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="50"
                android:text="@string/defaultName"/>

            <TextView
                android:id="@+id/txtRecipePossibleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="20"
                android:text="@string/defaultIsPossible"/>

            <TextView
                android:id="@+id/txtRecipePossible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="20"
                android:text="@string/defaultPossibleAnswer"/>

            <ImageView
                android:id="@+id/itemDownArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:contentDescription="@string/expandArrow"
                android:padding="5dp"
                android:src="@drawable/ic_down_arrow" />

            <ImageView
                android:id="@+id/itemUpArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:contentDescription="@string/collapseArrow"
                android:padding="5dp"
                android:src="@drawable/ic_up_arrow"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/recipeViewExpanded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipeViewCollapsed"
            android:visibility="gone"
            android:weightSum="100">

            <Button
                android:id="@+id/btnMakeRecipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="25"
                android:text="@string/btnMakeRecipe"
                android:backgroundTint="@color/redColour3"/>

            <Button
                android:id="@+id/btnAddToGroceryList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="25"
                android:text="@string/btnAddToGroceryList"
                android:backgroundTint="@color/redColour3"/>

            <Button
                android:id="@+id/btnEditRecipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="25"
                android:text="@string/btnEdit"
                android:backgroundTint="@color/redColour3"/>

            <Button
                android:id="@+id/btnRemoveRecipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="25"
                android:text="@string/btnRemove"
                android:backgroundTint="@color/redColour3"/>
        </LinearLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>
