...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btnEdit"
                android:layout_weight="20"
                android:backgroundTint="@color/redColour3"
                android:layout_margin="5dp"
                android:id="@+id/btnEditInstruction"/>

            <Button
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/btnMinus"
                android:backgroundTint="@color/redColour3"
                android:layout_margin="5dp"
                android:layout_width="0dp"
                android:id="@+id/btnRemoveInstruction"/>
        </LinearLayout>

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>

